tests/instantiating/invalid/groups_property_invalid_type_in_list/bus.fbd
main bus
	foo config
		groups = ["a", 1]
